--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -22,25 +22,27 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:background="#45424242"
+            android:background="#00424242"
             android:gravity="center"
             android:text="CARTAS"
             android:textColor="#FFFFFF"
-            android:textSize="48sp" />
+            android:textSize="48sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="372dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:background="#45424242"
-            android:text="Melhores Monstros"
-            android:textColor="#FFFFFF" />
+            android:background="#00424242"
+            android:text="MELHORES MONSTROS"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -62,7 +64,7 @@
                     android:layout_width="130dp"
                     android:layout_height="200dp"
                     android:layout_marginEnd="10dp"
-                    android:background="@drawable/amajorupset" />
+                    android:background="@drawable/accelsynchron" />
 
                 <ImageButton
                     android:id="@+id/buttonm3"
@@ -91,17 +93,18 @@
         <TextView
             android:layout_width="372dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:background="#45424242"
-            android:text="Melhores Magias"
-            android:textColor="#FFFFFF" />
+            android:background="#00424242"
+            android:text="MELHORES MAGIAS"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -152,16 +155,17 @@
         <TextView
             android:layout_width="372dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:background="#45424242"
-            android:text="Melhores Armadilhas"
-            android:textColor="#FFFFFF" />
+            android:background="#00424242"
+            android:text="MELHORES ARMADILHAS"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -212,16 +216,17 @@
         <TextView
             android:layout_width="372dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:background="#45424242"
-            android:text="Mais"
-            android:textColor="#FFFFFF" />
+            android:background="#00424242"
+            android:text="MAIS"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -254,6 +259,11 @@
 
             </LinearLayout>
         </HorizontalScrollView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"/>
 
     </LinearLayout>
 </ScrollView>
