--- a/app/src/main/res/layout/activity_main_splash.xml
+++ b/app/src/main/res/layout/activity_main_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,4 +7,20 @@
     android:background="@drawable/ic_blueeyeswhitedragon_ldb_pt_ur_1e_adobe_express"
     tools:context=".MainActivitySplash">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="325dp"
+        android:layout_marginStart="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="50dp">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/logojh"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+
+</LinearLayout>
