--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_backgroundyu_adobe_express"
+    android:background="@drawable/download"
     android:fillViewport="true">
 
     <ImageView
@@ -43,7 +43,7 @@
         android:layout_marginBottom="2dp"
         android:gravity="start"
         android:text="Criador : José Henrique"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
