--- a/app/src/main/res/layout/activity_main_splash.xml
+++ b/app/src/main/res/layout/activity_main_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,19 +8,21 @@
     tools:context=".MainActivitySplash">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="325dp"
-        android:layout_marginStart="150dp"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:cardCornerRadius="50dp">
+        app:cardCornerRadius="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/logojh"/>
+            android:background="@drawable/logojh" />
 
 
     </androidx.cardview.widget.CardView>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
